# cmake_test_VS

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake_test_proj/: CMakeLists.txt  cmake_test_proj.cpp  cmake_test_proj.h
config/: about.txt
resources/: hello_cmake.txt
